esercizio completato, modifica step 5 e aggiunta step 6

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!--Main-->
     <main>
         <h1>Secondo Victor JS</h1>
         <h2>Costo biglietto treno secondo il metodo prompt()</h2>
@@ -18,6 +19,7 @@
         
         <p id="prezzofinale"></p>
     </main>
+    <!--/Main-->
 <script src="js/main.js"></script>
 </body>
 </html>
